Implementation of LockCPA and ThreadCPA

--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -1,7 +1,8 @@
 \chapter{Реализация}
 \label{chapter_implementation}
 
-\section{Введение} \label{sect_impl_introduction}
+\section{Введение}
+\label{sect_impl_introduction}
 
 Реальные программы пользуются всеми возможностями языка Си, не все из которых были рассмотрены в теории.
 Например, описанная теория не предполагает использования указателей и адресной арифметики.
@@ -19,73 +20,96 @@
 При поиске состояний гонки может быть необходимо уточнить абстракцию сразу для нескольких обнаруженных состояний гонки.
 Уточнение абстракции последовательно становится очень неэффективным. В подразделе~\ref{sect_impl_refinement} описан процесс уточнения абстракции и применяемые оптимизации.
 
-Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации. Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки. Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualization} будут описан алгоритм печати трассы.
+Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации.
+Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки.
+Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualization} будут описан алгоритм печати трассы.
 
-\section{Реализация анализов} \label{sect_impl_overview}
+\section{Устройство инфраструктуры CPAchecker}
+\label{sect_impl_cpachecker}
 
-\subsection{Обзор инструмента}
+CEGAR
 
-Инструмент реализован в виде двух частей.
-Первая часть используется для определения множества разделяемых данных.
-Вторая часть представляет собой основной анализ, который используется для определения множества доступов к памяти.
-После завершения анализа строится множество потенциальных состояний гонки.
-На рисунке~\ref{img:method} представлена визуальная схема метода.
+\section{Реализация инструмента}
+\label{sect_impl_overview}
 
-\begin{figure}[ht] 
-  \centering
-  \includegraphics [scale=0.6] {MethodScheme}
-  \caption{Общая схема метода}
-  \label{img:method}
-\end{figure}
+\subsection{Анализ с раздельным анализом потоков}
+\label{subsect_impl_tm}
 
-Анализ разделяемых данных состоит из следующих видов анализа (CPA): BAMCPA, CompositeCPA, LocationCPA, CallstackCPA, LocalCPA.
-\begin{itemize}
-\item BAMCPA. Анализ будет подробно описан в соответствующем разделе.
-\item CompositeCPA. Анализ объединяет в себе несколько анализов, в нашем случае, LocationCPA, CallstackCPA и LocalCPA.
-\item LocationCPA. Анализ служит для корректного обхода графа потока управления. Абстрактным состоянием этого анализа является узел графа потока управления, а переход в следующее состояние возможен только по доступным дугам ГПУ из этого узла.
-\item CallstackCPA. Анализ служит для обеспечения контекстной зависимости. Абстрактным состоянием анализа является стек вызовов функций. Таким образом, вызов одной и той же функции из разных мест не приведет к получению одинакового абстрактного состояния.
-\item LocalCPA. Анализ определяет множество разделяемых переменных для данной точки программы.
-Информация о локальности данных распространяется по присваиваниям от точек выделения локальной памяти или взятия адреса локальной переменной.
-Если про некоторую переменную не известно ее статус, консервативно считается, что память является разделяемой.
-\end{itemize}
+\subsection{Анализ абстракций по блокам}
+\label{subsect_impl_bam}
 
-Основной анализ состоит из следующих CPA: BAMCPA, UsageCPA, CompositeCPA, LocationCPA, CallstackCPA, LockCPA, PredicateCPA.
-Анализы BAMCPA, CompositeCPA, LocationCPA и CallstackCPA являются теми же, что и в предыдущем случае.
-Подробное описание остальных анализов будет приведено далее.
+В процессе анализа используется оптимизация, использующая абстрактные блоки (англ. Block Abstraction Memoization, BAM). 
+Эта оптимизация позволяется переиспользовать результаты, полученные в процессе анализа.
+Например, если функция уже была проанализирована, и та же самая функция вызывается второй раз, анализировать ее заново не обязательно, если контекст ее вызова тот же самый.
+Абстрактными блоками, на границах которых производится кэширование результатов, могут быть как функции, так и тела циклов. 
 
-Исходный код программы, подаваемый на вход может быть разбит на несколько файлов, но, тем не менее, этот набор должен компилироваться.
-Чтобы избежать сложных конструкций языка Си и упростить код, часто применяется инструмент CIL~\cite{CIL}, который, в том числе, может объединять несколько файлов в один.
+Каждый анализ описывает специальный механизм выделения существенной части из своего абстрактного состояния. Это операция reduce. 
+По смыслу - эта операция избавляет от контекста при входе в новый блок.
+При входе анализом в новый абстрактный блок выполняется операция reduce. Полученное "уменьшенное" состояние ищется в кэше.
+В случае, если результат уже присутствует к кэше, то есть анализ для данного состояния уже проводился ранее, выполняется операция expand, которая на основе полного исходного состояния и неполного результирующего состояния строит полное результирующее состояние. 
+Если же фиксируется промах в кэше, это значит, что нужно провести анализ и сохранить его результат. 
 
-Результатом анализа является множество предупреждений.
-Каждое предупреждение представляет собой пару доступов к разделяемой памяти с непересекающимся множеством блокировок, при этом хотя бы одна из них является записью.
-Для каждого доступа к разделяемой памяти восстанавливается один из путей, который может привести к этому доступу.
-Формат выходных данных описан в разделе~\ref{sect_impl_visualization}.
+Существующая оптимизация BAM была предназначена для анализа на достижимость некоторого состояния.
+Основная проблема заключается в восстановлении пути, приводящего к ошибочному состоянию.
+В исходном варианте оптимизации BAM состояние было только одно - ошибочное, соответственно, ошибка могла быть зафиксирована, если анализ обнаружил путь к этому конкретному состоянию.
+В этот момент можно завершать анализ и восстанавливать ошибочный путь.
+При поиске состояний гонки приходится сначала строить все достижимые состояния, а затем искать те пары, которые образуют состояние гонки.
+В этом случае может возникнуть неопределенность при восстановлении пути, если одна из функций на стеке вызовов может быть вызвана из нескольких мест.
+В исходном варианте оптимизации анализ останавливается при получении первого же пути к ошибочному состоянию, и если бы на этом пути некоторая функция могла бы вызываться из другого места, то анализ должен был бы вначале исследовать этот путь и обнаружить путь к ошибочному состоянию раньше.
+
+Для решения этой проблемы был сделан переработан механизм восстановления пути. 
+При визуаилизации результатов нет необходимости показывать все возможные пути к некоторому доступу к памяти, однако в процессе уточнения необходимо проверить все варианты.
+Подробнее про процесс уточнения результатов будет рассказано в соответствующем разделе.
 
 \subsection{Анализ примитивов синхронизации}
-Анализ разделяемых данных соответствует описанному в теоретической части LockCPA.
-Одной из особенностей теоретически описанного LockCPA, это то, что захватываемый объект (блокировка) должна быть явно указана в операторе $acquire$.
-В реальных же программах сами объекты часто используются по указателям.
+Анализ примитивов синхнонизации соответствует описанному в теоретической части LockCPA (раздел~\ref{sect_lock_analysis}).
+Теоретически описанный LockCPA имеет ряд допущений:
+\begin{itemize}
+\item захватываемый объект (блокировка) должен быть явно указан в операторе $acquire$/$release$;
+\item никакие другие операторы, кроме $acquire$/$release$, не работают с примитивами синхронизации;
+\item отсутствие рекурсивного захвата блокировки;
+\end{itemize}
+
+\subsubsection{Указатели на объекты блокировок}
+В реальных же программах блокировки часто передаются в функцию захвата или освобождения по указателям.
+При этом указатели могут храниться в полях различных структур.
+Это значительно усложняет задачу определения реального объекта блокировки, с помощью которого производится синхронизация.
 Во многих статьях, которые задаются вопросом применения своих инструментов к реальному программному обеспечению, часто применяют анализ указателей для вычисления объектов, на которые могут указывать те указатели, которые используются при захвате блокировки.
 Однако, как и всякий анализ указателей, такой подход имеет ряд недостатков, главными из которых являются его эффективность и точность.
 Дело в том, что анализ указателей Андерсена (и его различные вариации) может применяться только если указатели должным образом инициализируются.
-В случае же если инициализация указателя не была проведена должным образом и ему не была поставлена в соответствие некоторая память, такой анализ будет некорректным.
-В нашем случае инициализация многих указателей может отсутствовать, так как не весь исходный код может верифицироваться за один раз.
+В случае же если инициализация указателя не была проведена, и этому указателю не была поставлена в соответствие некоторая память, такой анализ будет некорректным.
+В нашем случае инициализация многих указателей может отсутствовать, так как не весь исходный код может доступен.
 
 Все это приводит к тому, что определить точное соответствие указателей в общем случае становится невозможным.
 Приходится делать некоторое разумное предположение о том, что захват блокировки и ее освобождение, скорее всего, будет производится одинаковым образом.
 Например, если был использован указатель на объект при захвате, то он же будет использован и при освобождении.
-Таким образом, становится возможно, в соответствии с теорией, по имени переменной, быть может указателю, явно определить тот объект, с которым производится работа.
+А если при захвате использовался указатель на поле структуры, то и при освобождении будет передан указатель на поле с тем же именем и структуры того же типа.
+Таким образом, становится возможно, в соответствии с теорией, по имени переменной, быть может указателю, явно идентифицировать тот объект, с которым производится работа.
 
+\subsubsection{Неявные операции работы с примитивами синхронизации}
+В пользовательских программах используется выделенный интерфейс для работы с примитивами синхронизации, который предоставляет операционная система.
+В POSIX это функции pthread\_mutex\_lock/pthread\_mutex\_unlock. 
+Однако, компоненты операционной системы внутри себя могут использовать различные примитивы синхронизации напрямую.
+Например, проверять, включено ли планирование, которое также может выступать в роли особой (глобальной) блокировки.
+При этом такая проверка может быть, как через специальный интерфейсный макрос/функции, например, $dispatchEnable()$, так и через явное обращение к переменной $dispatchEnable == 1$\footnote{Пример кода является вымышленным, совпадение с какой-либо известной операционной системой является случайным}.
+Кроме того, отключение планирование (захват блокировки) может также проводиться с помощью интерфейсного макроса/функции $dispatchDisable()$ или напрямую $dispatchDisable = 1$.
+Хотя явное присваивание в служебные переменные без выделения интерфейсных макросов/функций является плохим стилем программирования, такой код иногда встречается на практике, и поэтому нуждается в поддержке.
+Таким образом, реализация анализа примитивов синхронизации была расширена для обработки таких случаев, как присваивание в переменную и проверки ее значения.
+
+\subsubsection{Рекурсивный захват блокировки}
 Еще одной небольшой особенностью реализации является поддержка рекурсивного захвата блокировки. 
-Некоторые блокировки допускают захват несколько раз в одном потоке.
-В описанной теории такой случай не поддерживается, однако в реализации достаточно просто поддержать его при условии, что такой захват не будет встречаться в цикле.
-
-В реальном программном обеспечении возможны ситуации, в которых анализ будет рассматривать такие пути, которые недостижимы в при реальном выполнении.
-Классическим примером такой ситуации, является захват и освобождение блокировки под одни и тем же условием. 
+Некоторые блокировки допускают захват себя несколько раз в одном потоке.
+В этом случае как только число вызовов функций освобождения будет равно числу ее захватов, она считается окончательно освобожденной.
+В описанной теории такой случай не поддерживается, так как захваченные блокировки моделируются множеством.
+В реализации достаточно просто поддержать рекурсивный захват, заменив множество на мультимножество.
+Однако, в этом случае возможны ситуации с неконтролируемом ростом числа захваченных блокировок.
+Это возможно как из-за ошибки в самом исходном коде, например, из-за захвата блокировки в цикле, так и из-за неточности самого анализа, например, рассмотрение недостижимого пути с отсутствующей парной операцией освобождения блокировки.
+То есть, при реальном выполнении программы такой путь был бы невозможен, и для каждой операции захвата была бы соответствующая операция освобождения, но из-за неточности анализа.
+Классическим примером такой ситуации является захват и освобождение блокировки под одни и тем же условием. 
 После выполнения такого участка кода при реальном выполнении ситуация, при которой эта блокировка останется захваченной, невозможна.
 Однако, анализ может не определить, что условия являются тождественными, и будет рассматривать такой путь, при котором захват блокировки был произведен, а освобождения не было.
-Такая ситуация чревата тем, что количество абстрактных состояний в анализе может удвоиться, если такая функция вызывается достаточно часто.
-И хотя такие шаблоны встречаются нечасто, все-таки обычно блокировки захватываются без сложных условий, необходимо было иметь возможность давать анализу некоторые подсказки.
+Такая ситуация чревата тем, что количество абстрактных состояний в анализе может удвоиться, то есть, после выхода из функции (или блока кода внутри функции) вместо единственного достижимого состояния без захваченных блокировок, будут рассматриваться состояния как без блокировок, так и с захваченной блокировкой.
+И хотя такие шаблоны встречаются нечасто, все-таки обычно блокировки захватываются без сложных условий, необходимо иметь возможность давать анализу некоторые подсказки.
 
 Такими подсказками стали аннотации функций.
 Разработчик может добавить информацию о том, как именно следует обрабатывать конкретную функцию.
@@ -97,15 +121,114 @@
 \item при выходе из функции все изменения блокировок сбрасываются, то есть, считается, что на выходе из функции захвачены те и только те блокировки, которые были захвачены на входе в функцию.
 \end{itemize}
 
+\subsubsection{Эффект блокировки}
+Еще одно отличие от теории -- использование \textit{эффектов блокировок} -- было сделано больше для удобства, чем для эффективности.
+С точки зрения теории оператор $transfer$ должен предоставить следующее (возможно, измененное) состояние.
+В реализации этот оператор для каждой CFA дуги извлекает некоторое действие, которое она может совершить над состоянием. 
+И затем, это действие применяется к состоянию. 
+Выделения действия в отдельный интерфейс является не обязательной даже с точки зрения эффективности, так как даже на больших примерах время работы LockCPA находится в рамках статистической погрешности (меньше 0,1\% от общего времени работы).
+Однако, выделение каждого изменения в отдельный класс упрощает структуру кода.
+Так, имеются следующие варианты действия над состоянием:
+\begin{itemize}
+\item захват блокировки;
+\item освобождение блокировки;
+\item установка конкретного значения счетчика рекурсивного захвата блокировки;
+\item восстановление заданного значения счетчика рекурсивного захвата для некоторой блокировки;
+\item восстановление заданного значения счетчика рекурсивного захвата для всех блокировок;
+\item проверка значения счетчика рекурсивного захвата для заданной блокировки;
+\end{itemize}
+
+\subsubsection{Оптимизация BAM}
+Отдельно следует отметить оптимизации, сделанные в рамках подхода BAM, который описан в подразделе~\ref{subsect_impl_bam}.
+Как было описано, BAM позволяет кэшировать результаты, если некоторая часть состояния ($reduced$ $state$) совпадает с уже пройденным. 
+При этом, чем менее уникальным состоянием будет $reduced$ $state$, тем эффективнее будет работать кэширование, то есть тем чаще будут возникать попадания в кеш.
+С другой стороны, необходимо иметь возможность восстановить исходное состояние по $reduced$ $state$ в конце блока.
+Очевидно, что если внутри блока не происходит никакого изменения состояния, то есть, внутри блока нет операций с примитивами синхронизации, то исходное состояние в конце блока равно исходному состоянию в начале блока, и в этом случае можно полностью удалять все захваченные блокировки. 
+В этом случае кэш будет работать максимально эффективно с учетом работы других CPA.
+В этом случае, конечно, остаются технические моменты, связанные с вычислением состояний гонки по завершению анализа.
+Действительно, во множестве достижимых состояний сохраняются $reduced$ $state$, в которых могут отсутствовать те блокировки, которые используются для обеспечения взаимного исключения параллельной работы потоков.
+В этом случае будет необходимо восстановить все утраченные блокировки после построения абстракции, о чем будет подробно рассказано в соответствующем разделе.
+
+Одной из достаточно тривиальных оптимизаций для блоков, в которых производится работа с примитивами синхронизации, является удаление только тех блокировок, которые не затрагиваются этими операциями. 
+Например, если известно, что в некотором блоке производится захват и/или освобождение блокировки $lock_1$, то из состояния можно удалить все остальные блокировки, а на выходе построить новое полное состояние, взяв изменение счетчика рекурсивных захватов $lock_1$ и добавив к нему значения счетчиков для других блокировок, взятые из исходного состояния. 
+Такая оптимизация требует некоторого преданализа, результатом которого будет множество используемых блокировок для каждого блока.
+
+Другой возможной оптимизацией является сокращение счетчика рекурсивных захватов.
+Действительно, даже в случае, если внутри функции происходит захват/освобождение блокировки один раз, не имеет значения, сколько раз эта блокировка была захвачена до этого. 
+Таким образом, при входе в функцию можно заменить значение счетчика рекурсивных захватов на единицу, а при выходе, соответственно, применить полученную разницу к исходному состоянию.
+В случае применения этой оптимизации становится невозможным различить применение операции $release$ и $reset$, которая полностью сбрасывает счетчик рекурсивных захватов. 
+Аналогичные проблемы вызывает операция установки конкретного значения счетчика рекурсивных захватов, хотя это исключительно редкая операция.
+Более того, если в блоке используются более одной операции $acquire$/$release$ подряд, это становится аналогичным использованию уже описанных операторов.
+Однако, все эти случаи встречаются достаточно редко, обычный сценарий использования - это захват одной блокировки в начале функции и освобождение ее в конце.
+Отсюда следует, что указанная оптимизация может применяться только в тех блоках, в которых не используются такие запрещенные конструкции.
+
 \subsection{Анализ потоков}
-Анализ потоков соответствует описанному в теоретической части ThreadCPA.
-Основным отличием является то, что 
+Анализ потоков соответствует описанному в теоретической части ThreadCPA: разделы~\ref{sect_thread_analysis} и~\ref{sect_simple_thread_cpa}.
+
+\subsubsection{Ограничения реализации}
+
+Важным отличием реализации данного анализа от теории является отсутствие жестко заданных идентификаторов потока. 
+В теории идентификатором потока является точка входа в функцию потока. 
+Соответственно, в этом случае становится невозможно поддерживать создание нескольких одинаковых потоков. 
+Поэтому требуется некоторый явный идентификатор потока, который должен быть уникален.
+
+В реальных языках используются различные интерфесы для создания потоков: POSIX, MPI, OpenMP и дл. 
+Для системного программного обеспечения ближе оказывается интерфейс POSIX, в котором указывается некоторая переменная, в которой будет находится системный идентификатор потока, функция потока, ее аргумент, а также некоторые атрибуты. 
+В этом случае идентификатором для анализа может выступать имя переменной, в которой должен находиться системный идетификатор потока.
+Ограничением такого подхода является различные нестандартные ситуации, в которых происходит создание нового потока, с записью его идентификатора в переменную, в которой уже находится идентификатор другого исполняемого потока.
+Такие ситуации не являются некорректными с точки зрения стандарта POSIX, но являются нетипичными для реального программного обеспечения.
+
+Другим ограничением данного способа идентификации потоков является невозможность передачи идентификаторов через присваивания другим переменным. 
+Так как для анализа потоков идентификатором потока является имя переменной, то присваивание системного идентификатора потока в другую переменную останется незамеченным.
+Такие ограничения могут быть существенными для некоторого системного программного обеспечения, однако при решении конкретных прикладных задач автору не требовалась необходимость для расширения возможностей ThreadCPA.
+Тем не менее, платформа CPAchecker позволяет переиспользовать различные анализы алиасов (синонимов) для решения этой задачи. 
+Таким образом, такое ограничение хотя и может оказаться существенным для специфического программного обеспечения, само по себе не является критичным, и в случае необходимости может быть устранено с помощью существующих компонентов CPAchecker.
+
+Еще одним ограничением эффективной релизации является неполная поддержка операций, типа $thread\_join$. 
+Предполагается, что ожидать завершения потока может только тот поток, который его создал.
+В общем случае, это, конечно, может быть не так, однако, ситуация с передачей идентификатора дочернего потока от одного родительского потока другому для ожидания является необычной, и не встречалася в конкретных практических программах. 
+Традиционная схема работы является следующей: один родительский поток создает несколько дочерних рабочих потоков (worker), раздает им задачи, а затем ожидает их завершения. 
+Следует особенно подчеркнуть, что данное ограничение справедливо только для эффективной реализации, которая является инвариантной к эффектам окружения.
+При использовании менее эффективной реализации, в которой используются переходы окружения для построения полного дерева потоков, нет никакой разницы, какой поток выполняет операцию $thread\_join$.
+
+\subsubsection{Используемые оптимизации}
+
+Одной из важных оптимизаций является обработка ситуации, при которой производится создание потока с уже существующим идентификатором. 
+Как уже было описано в предыдущем подразделе, такие ситуации являются нестандартными при реальном выполнении программы, однако они могут возникать внутри анализа из-за его неточностей.
+То есть, путь, в котором производится создание нескольких одинаковых потоков, является недостижимым при реальном выполнении.
+В соответствии с подходом CEGAR можно было бы для каждого такого случая запустить процесс уточнения абстракции, а затем перестроить абстракцию заново с новым уровнем точности.
+В целях повышения эффективности в процессе анализа такие ситуации не приводят к уточнению абстракции, а обрабатываются одним из двух следующих вариантов.
+
+\begin{itemize}
+\item После создания второго экземпляра (инстанса) потока, производится создание т.н. \textit{само-параллельного потока}, которые сильно похожи на абстракция счетчиков (англ. counter abstraction).
+Это означает, что теряется информация о точном количестве созданных потоков, и считается, что все операторы этого потока могут быть выполнены параллельно друг с другом.
+В этом случае становится бессмысленным дальнейшее создание потока, так как полученные состояния уже являются аппроксимацией сверху, так как соответствуют любому количеству созданных потоков.
+Для классических методов проверки моделей такая оптимизация приводит к значительной потере точности, но для подхода с раздельным рассмотрением потоков информация о возможных зависимостях между потоками уже потеряна.
+Поэтому применение такой оптимизации при таком подходе не сильно снижает точность анализа.
+
+\item Игнорирование создания второго и последующего потоков. 
+Такой подход, в общем случае, конечно может приводить к пропуску ошибок. 
+Однако в некоторых случаях она позволяет получить корректные результаты.
+Например, если потоки являются искусственными, то есть не относятся к исходному коду программы, а лишь кодируют те части кода, которые могут выполняться параллельно.
+
+\end{itemize}
+
 
 \subsection{Анализ предикатов}
-Анализ потоков соответствует описанному в теоретической части PredicateCPA.
+Анализ потоков соответствует описанному в теоретической части PredicateCPA~\ref{sect_predicate_analysis}.
+
+
+Оптимизация с undef функции
+Оптимизация представления эффектов
+Инвариантность к окружению
+Оператор blk
+Уточнение
+
 Основной его особенностью является возможность применения havoc-абстракции, которая заключается в том, что при чтении данных из разделяемых переменных, считается, что они могут принимать любое значение.
 Как уже отмечалось, такой анализ является инвариантным к переходам "по окружению", поэтому применение inference objects в этом случае не позволит получить новые состояния.
-%Тоже сделать частью Usage?
+
+\subsection{Анализ композиции}
+Оптимизации для включения существующих анализов
 
 \subsection{Анализ доступов к данным}
 Основной задачей UsageCPA является определение и сохранение информации о доступах к данным. 
@@ -142,34 +265,52 @@
 Для такой функции может быть аннотация, которая определяет, что доступ к памяти, которую возвращает эта функция, должен трактоваться как доступ ко всему списку. 
 В этом примере важно, что функция \textit{getLast()} не удаляет последний элемент из списка.
 
-\subsection{Анализ абстракций по блокам} \label{subsect_impl_bam}
-
-В процессе анализа используется оптимизация, использующая абстрактные блоки (англ. Block Abstraction Memoization, BAM). 
-Эта оптимизация позволяется переиспользовать результаты, полученные в процессе анализа.
-Например, если функция уже была проанализирована, и та же самая функция вызывается второй раз, анализировать ее заново не обязательно, если контекст ее вызова тот же самый.
-Абстрактными блоками, на границах которых производится кэширование результатов, могут быть как функции, так и тела циклов. 
-
-Каждый анализ описывает специальный механизм выделения существенной части из своего абстрактного состояния. Это операция reduce. 
-По смыслу - эта операция избавляет от контекста при входе в новый блок.
-При входе анализом в новый абстрактный блок выполняется операция reduce. Полученное "уменьшенное" состояние ищется в кэше.
-В случае, если результат уже присутствует к кэше, то есть анализ для данного состояния уже проводился ранее, выполняется операция expand, которая на основе полного исходного состояния и неполного результирующего состояния строит полное результирующее состояние. 
-Если же фиксируется промах в кэше, это значит, что нужно провести анализ и сохранить его результат. 
-
-Существующая оптимизация BAM была предназначена для анализа на достижимость некоторого состояния.
-Основная проблема заключается в восстановлении пути, приводящего к ошибочному состоянию.
-В исходном варианте оптимизации BAM состояние было только одно - ошибочное, соответственно, ошибка могла быть зафиксирована, если анализ обнаружил путь к этому конкретному состоянию.
-В этот момент можно завершать анализ и восстанавливать ошибочный путь.
-При поиске состояний гонки приходится сначала строить все достижимые состояния, а затем искать те пары, которые образуют состояние гонки.
-В этом случае может возникнуть неопределенность при восстановлении пути, если одна из функций на стеке вызовов может быть вызвана из нескольких мест.
-В исходном варианте оптимизации анализ останавливается при получении первого же пути к ошибочному состоянию, и если бы на этом пути некоторая функция могла бы вызываться из другого места, то анализ должен был бы вначале исследовать этот путь и обнаружить путь к ошибочному состоянию раньше.
-
-Для решения этой проблемы был сделан переработан механизм восстановления пути. 
-При визуаилизации результатов нет необходимости показывать все возможные пути к некоторому доступу к памяти, однако в процессе уточнения необходимо проверить все варианты.
-Подробнее про процесс уточнения результатов будет рассказано в соответствующем разделе.
-
 
 \subsection{Пример работы} \label{sect_impl_example}
 Пример работы 
+
+\subsection{Использование преданализа для построения множества разделяемых данных}
+
+Инструмент реализован в виде двух стадий.
+Первая часть используется для определения множества разделяемых данных.
+Вторая часть представляет собой основной анализ, который используется для определения множества доступов к памяти.
+После завершения работы основного анализа строится множество потенциальных состояний гонки.
+На рисунке~\ref{img:method} представлена визуальная схема метода.
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.6] {MethodScheme}
+  \caption{Общая схема метода}
+  \label{img:method}
+\end{figure}
+
+Анализ разделяемых данных состоит из следующих CPA: BAMCPA, CompositeCPA, LocationCPA, CallstackCPA, ThreadCPA, LocalCPA.
+\begin{itemize}
+\item BAMCPA. Данный CPA реализует оптимизацию кеширования абстрактных блоков. Анализ будет подробно описан в соответствующем разделе.
+\item CompositeCPA. Анализ объединяет в себе несколько анализов, в нашем случае, LocationCPA, CallstackCPA и LocalCPA.
+\item LocationCPA. Анализ служит для корректного обхода графа потока управления.
+Абстрактным состоянием этого анализа является узел графа потока управления, а переход в следующее состояние возможен только по доступным дугам ГПУ из этого узла.
+\item CallstackCPA. Анализ служит для обеспечения контекстной зависимости.
+Абстрактным состоянием анализа является стек вызовов функций.
+Таким образом, вызов одной и той же функции из разных мест не приведет к получению одинакового абстрактного состояния.
+\item LocalCPA. Анализ определяет множество разделяемых переменных для данной точки программы.
+Информация о локальности данных распространяется по присваиваниям от точек выделения локальной памяти или взятия адреса локальной переменной.
+Если для некоторой переменной не известен ее статус, консервативно считается, что память является разделяемой.
+\end{itemize}
+
+Основной анализ состоит из следующих CPA: BAMCPA, UsageCPA, CompositeCPA, LocationCPA, CallstackCPA, LockCPA, PredicateCPA, ThreadCPA.
+Анализы BAMCPA, CompositeCPA, LocationCPA и CallstackCPA являются теми же, что и в предыдущем случае.
+Подробное описание остальных анализов будет приведено далее.
+UsageCPA выполняет некоторые оптимизации, связанные с упрощением доступов к памяти.
+Например, заменяет доступ к элементу списка на доступ ко всем списку.
+
+Исходный код программы, подаваемый на вход может быть разбит на несколько файлов, но, тем не менее, этот набор должен компилироваться.
+Чтобы избежать сложных конструкций языка Си и упростить код, часто применяется инструмент CIL~\cite{CIL}, который, в том числе, может объединять несколько файлов в один.
+
+Результатом анализа является множество предупреждений.
+Каждое предупреждение представляет собой пару доступов к разделяемой памяти с непересекающимся множеством блокировок, при этом хотя бы одна из них является записью.
+Для каждого доступа к разделяемой памяти восстанавливается один из путей, который может привести к этому доступу.
+Формат выходных данных описан в разделе~\ref{sect_impl_visualization}.
 
 \section{Оптимизации хранения данных} \label{sect_impl_storage}
 
