--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,90 @@
+@inproceedings{Witness,
+ author = {Beyer, Dirk and Dangl, Matthias and Dietsch, Daniel and Heizmann, Matthias and Stahlbauer, Andreas},
+ title = {Witness Validation and Stepwise Testification Across Software Verifiers},
+ booktitle = {Proceedings of the 2015 10th Joint Meeting on Foundations of Software Engineering},
+ series = {ESEC/FSE 2015},
+ year = {2015},
+ isbn = {978-1-4503-3675-8},
+ location = {Bergamo, Italy},
+ pages = {721--733},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/2786805.2786867},
+ doi = {10.1145/2786805.2786867},
+ acmid = {2786867},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Counterexample Validation, Error Witness, Model Checking, Program Analysis, Software Verification}
+}
+
+@article{SSA,
+ author = {Cytron, Ron and Ferrante, Jeanne and Rosen, Barry K. and Wegman, Mark N. and Zadeck, F. Kenneth},
+ title = {Efficiently Computing Static Single Assignment Form and the Control Dependence Graph},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {Oct. 1991},
+ volume = {13},
+ number = {4},
+ month = {oct},
+ year = {1991},
+ issn = {0164-0925},
+ pages = {451--490},
+ numpages = {40},
+ url = {http://doi.acm.org/10.1145/115372.115320},
+ doi = {10.1145/115372.115320},
+ acmid = {115320},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {control dependence, control flow graph, def-use chain, dominator, optimizing compilers}
+} 
+
+@article{Lipton,
+ author = {Lipton, Richard J.},
+ title = {Reduction: A Method of Proving Properties of Parallel Programs},
+ journal = {Commun. ACM},
+ issue_date = {Dec. 1975},
+ volume = {18},
+ number = {12},
+ month = {dec},
+ year = {1975},
+ issn = {0001-0782},
+ pages = {717--721},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/361227.361234},
+ doi = {10.1145/361227.361234},
+ acmid = {361234},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computation sequence, deadlock free, indivisible, interruptible, parallel program, process, reduction, semaphore, verification method}
+} 
+
+@article{LazyAbstraction,
+ author = {Henzinger, Thomas A. and Jhala, Ranjit and Majumdar, Rupak and Sutre, Gr{\'e}goire},
+ title = {Lazy Abstraction},
+ journal = {SIGPLAN Not.},
+ issue_date = {Jan. 2002},
+ volume = {37},
+ number = {1},
+ month = {jan},
+ year = {2002},
+ issn = {0362-1340},
+ pages = {58--70},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/565816.503279},
+ doi = {10.1145/565816.503279},
+ acmid = {503279},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@ARTICLE{clarke:cegar,
+	 AUTHOR="Clarke, E.M. and Grumberg, O. and Jha, S. and Lu, Y. and Veith, H.",
+	 TITLE="Counterexample-guided abstraction refinement",
+	 JOURNAL="Proc. CAV, LNCS",
+	 VOLUME="1855",
+	 PAGES="154--169",
+	 PUBLISHER="Springer Berlin",
+	 YEAR={2000}
+}
+
 @InProceedings{RacesFreeRtos,
 author="Chopra, Nikita
 and Pai, Rekha
@@ -1946,8 +2033,8 @@ annote = {}
 @article{CEGAR01,
 	 language="russian",
 	 AUTHOR={M.U. Mandrykin and V.S. Mutilin and A.V. Khoroshilov},
-	 TITLE={Vvedenie v metod {CEGAR} -- utochnenie abstraktsii po kontrprimeram [{I}ntroduction to {CEGAR} -- {C}ounter-{E}xample {G}uided {A}bstraction {R}efinement]},
-	 JOURNAL={Trudy ISP RAN [Proceedings of ISP RAS]},
+	 TITLE={Введение в метод {CEGAR} -- уточнение абстракции по контрпримерам},
+	 JOURNAL={Труды ИСП РАН},
 	 PAGES="219--292",
 	 volume={24},
 	 address = {Moscow},
